force-app/main/default/objects/Document_Checklist_Comment__c.object
<CustomObject>
    <description>Comment holder for document checklist</description>
    <fields>
        <fullName>API_Request__c</fullName>
        <description>API Request body for document request patch to Callista</description>
        <label>API Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>API_Response__c</fullName>
        <description>API Response for doc request patch from Callista</description>
        <label>API Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <description>Cancelled Date of the comment</description>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is the document comment cancelled</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>Comment content details</description>
        <label>Content</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Correlation_Id__c</fullName>
        <description>Correlation Id from Callsita for document req patch success response</description>
        <label>Correlation Id</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Checklist__c</fullName>
        <description>Linked checklist where the comment is for.</description>
        <label>Document Checklist</label>
        <referenceTo>Document_Checklist__c</referenceTo>
        <relationshipLabel>Document Checklist Comments</relationshipLabel>
        <relationshipName>Document_Checklist_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NotesSeen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to tag new notes and whether it has already been seen by community users.</description>
        <label>Notes Seen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notify_Email_Addresses__c</fullName>
        <description>Notify Email Addresses for Grad Research document request</description>
        <label>Notify Email Addresses</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <description>Comment request date from callista</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_Sequence_Number__c</fullName>
        <description>Request Sequence Number from Callista for Document request</description>
        <label>Request Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Document Checklist Comment</label>
    <nameField>
        <displayFormat>DCC{YYYY}-{000000}</displayFormat>
        <label>Document Checklist Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Checklist Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>